# slam_in_autonomous_driving

./: CMakeLists.txt  README.md
common/: dataset_type.h  eigen_types.h  g2o_types.h  global_flags.cpp  global_flags.h  gnss.h  imu.h  io_utils.cpp  io_utils.h  lidar_utils.h  math_utils.h  nav_state.h  odom.h  point_cloud_utils.cpp  point_cloud_utils.h  point_types.h  sys_utils.h
src/: CMakeLists.txt
src/ch2/: CMakeLists.txt  motion.cpp
src/ch3/: CMakeLists.txt  eskf.hpp  imu_integration.h  process_gnss.cpp  run_eskf_gins.cpp  run_imu_integration.cpp  static_imu_init.cpp  static_imu_init.h  utm_convert.cpp  utm_convert.h
src/ch4/: CMakeLists.txt  g2o_types.cpp  g2o_types.h  gins_pre_integ.cpp  gins_pre_integ.h  imu_preintegration.cpp  imu_preintegration.h  run_gins_pre_integ.cpp  test_preintegration.cpp
src/ch5/: CMakeLists.txt  bfnn.cpp  bfnn.h  gridnn.h  kdtree.cpp  kdtree.h  linear_fitting.cpp  octo_tree.cpp  octo_tree.h  pcd_to_bird_eye.cpp  point_cloud_load_and_vis.cpp  scan_to_range_image.cpp  test_nn.cpp
src/ch6/: CMakeLists.txt  icp_2d.cpp  icp_2d.h  lidar_2d_utils.cpp  lidar_2d_utils.h  test_2d_icp_s2s.cpp  test_2dlidar_io.cpp
src/tools/ui/: pangolin_window.cpp  pangolin_window.h  pangolin_window_impl.cpp  pangolin_window_impl.h  ui_car.cpp  ui_car.h  ui_cloud.cpp  ui_cloud.h  ui_trajectory.cpp  ui_trajectory.h
